--- a/src/css/uidevtest.css
+++ b/src/css/uidevtest.css
@@ -1,12 +1,45 @@
 /*-- Global ------------------------------------------------------------------*/
 
 body {
-	font-family: "Arial", sans-serif;
+	
 }
 
 p {
 	padding: 0;
 	margin: 0;
+}
+
+#container {
+	color: #444;
+	font-family: "Arial", sans-serif;
+}
+
+#container a {
+	color: #036dbe;
+	text-decoration: none;
+}
+
+/*-- Utils ---------- --------------------------------------------------------*/
+
+.clearfix:after {
+	content: ".";
+	display: block;
+	clear: both;
+	visibility: hidden;
+	line-height: 0;
+	height: 0;
+}
+ 
+.clearfix {
+	display: inline-block;
+}
+ 
+html[xmlns] .clearfix {
+	display: block;
+}
+ 
+* html .clearfix {
+	height: 1%;
 }
 
 /*-- Story List Items --------------------------------------------------------*/
@@ -29,7 +62,6 @@ p {
 }
 
 .list-item a {
-	color: #036dbe;
 	font-size: 16px;
 	font-weight: bold;
 	line-height: 20px;
@@ -48,11 +80,88 @@ p {
 /*-- Story View --------------------------------------------------------------*/
 
 #breadcrumbs {
+	border: 2px solid #cdcdcd;
+	border-width: 2px 0;
+	padding: 5px 10px;
+	margin-bottom: 10px;
 
+	font-size: 11px;
+	font-weight: bold;
+	text-transform: uppercase;
 }
 
 h1 {
-	
+	margin: 0;
+	color: #444;
+	font-size: 24px;
+}
+
+p.story-timestamp {
+	color: #444;
+	font-size: 11px;
+	line-height: 20px;
+	margin-bottom: 10px;
+}
+
+#social-links {
+	float: left;
+}
+
+#social-links a {
+	display: inline-block;
+	zoom: 1;
+	*display: inline;
+	margin-right: 10px;
+
+	font-size: 11px;
+	font-weight: bold;
+	line-height: 20px;
+	text-decoration: underline;
+	text-transform: uppercase;
+}
+
+#social-links .icon {
+	float: left;
+	height: 20px;
+	width: 20px;
+	margin-right: 3px;
+
+	background: transparent url('../images/uidevtest-sprites.png') no-repeat 0 0;
+	filter: grayscale(100%);
+	-webkit-filter: grayscale(100%);
+	-moz-filter: grayscale(100%);
+	-ms-filter: grayscale(100%);
+	-o-filter: grayscale(100%);
+}
+
+#social-links a:hover .icon {
+	filter: grayscale(0%);
+	-webkit-filter: grayscale(0%);
+	-moz-filter: grayscale(0%);
+	-ms-filter: grayscale(0%);
+	-o-filter: grayscale(0%);
+}
+
+#social-links .icon-comment {
+	background-position: 0 0;
+}
+
+#social-links .icon-share {
+	background-position: -20px 0;
+}
+
+#social-links .icon-favorite {
+	background-position: -40px 0;
+}
+
+#social-links .icon-vote {
+	background-position: -60px 0;
+}
+
+.byline {
+	font-size: 14px;
+	line-height: 18px;
+	margin-bottom: 20px;
 }
 
 .lead-photo {
@@ -60,8 +169,72 @@ h1 {
 	margin-right: 15px;
 }
 
+.lead-photo .image-block {
+	position: relative;
+	margin-bottom: 5px;
+}
+
+.lead-photo img {
+	display: block;
+	border: 2px solid #000;
+}
+
+.lead-photo .photo-credit {
+	display: inline-block;
+	position: absolute;
+	bottom: 2px;
+	right: 2px;
+
+	background-color: rgba(255,255,255, .6);
+	color: #000;
+	font-size: 14px;
+	line-height: 20px;
+	padding: 0 3px;
+}
+
+.lead-photo .photo-caption {
+	clear: left;
+	font-size: 14px;
+	line-height: 14px;
+}
+
+#columns {
+	float: left;
+	padding-top: 20px;
+}
+
 .column {
 	float: left;
 	margin-right: 15px;
 	width: 260px;
+
+	font-size: 14px;
+	line-height: 18px;
+}
+
+@media (max-width: 480px) {
+  	#container h1 {
+  		color: blue;
+  	}
+
+  	#social-links {
+  		float: right;
+  	}
+
+  	.lead-photo {
+  		clear: right;
+  	}
+
+  	.lead-photo .photo-credit {
+  		background-color: none;
+  		display: block;
+  		text-align: right;
+  		color: #898989;
+  		position: static;
+  	}
+
+  	.column {
+  		margin: 0;
+  		width: auto;
+  	}
 }
