--- a/src/css/uidevtest.css
+++ b/src/css/uidevtest.css
@@ -1,10 +1,10 @@
 /*-- Global ------------------------------------------------------------------*/
 
 body {
-	
+	margin: 15px;
 }
 
-p {
+p, ul, li {
 	padding: 0;
 	margin: 0;
 }
@@ -19,7 +19,7 @@ p {
 	text-decoration: none;
 }
 
-/*-- Utils ---------- --------------------------------------------------------*/
+/*-- Utils -------------------------------------------------------------------*/
 
 .clearfix:after {
 	content: ".";
@@ -46,35 +46,43 @@ html[xmlns] .clearfix {
 
 .list-item {
 	list-style-type: none;
-	margin: 0;
-	padding: 0;
+	margin: 0 0 10px 0;
+	padding: 5px 0 0 0;
 	clear: left;
 }
 
 .list-item img {
 	float: left;
 	border: 2px solid #fff;
-	margin: 0 10px 20px 0;
+	margin: -5px 15px 20px 0;
 	
 	-moz-box-shadow: 3px 3px 3px #aaa;
 	-webkit-box-shadow: 3px 3px 3px #aaa;
 	box-shadow: 3px 3px 3px #aaa;
 }
 
+.list-item .list-text {
+	margin-left: 150px;
+}
+
 .list-item a {
 	font-size: 16px;
 	font-weight: bold;
 	line-height: 20px;
-	text-decoration: none;
+	margin-top: 5px;
 }
 
 .list-item a:hover {
-	text-decoration: underline;
+	text-decoration: underline !important;
 }
 
 .list-item .list-item-categories, .list-item .list-item-timestamp {
 	color: #444444;
 	font-size: 14px;
+}
+
+.list-item .list-item-categories {
+	margin-bottom: 14px;
 }
 
 /*-- Story View --------------------------------------------------------------*/
@@ -103,15 +111,11 @@ p.story-timestamp {
 	margin-bottom: 10px;
 }
 
-#social-links {
-	float: left;
-}
-
 #social-links a {
 	display: inline-block;
 	zoom: 1;
 	*display: inline;
-	margin-right: 10px;
+	margin-right: 15px;
 
 	font-size: 11px;
 	font-weight: bold;
@@ -212,17 +216,23 @@ p.story-timestamp {
 	line-height: 18px;
 }
 
+.column p {
+	margin-bottom: 18px;
+}
+
+/*-- Under 480px -------------------------------------------------------------*/
+
 @media (max-width: 480px) {
   	#container h1 {
   		color: blue;
   	}
 
-  	#social-links {
-  		float: right;
-  	}
-
-  	.lead-photo {
-  		clear: right;
+  	#social-links .icon {
+  		filter: grayscale(0%);
+		-webkit-filter: grayscale(0%);
+		-moz-filter: grayscale(0%);
+		-ms-filter: grayscale(0%);
+		-o-filter: grayscale(0%);
   	}
 
   	.lead-photo .photo-credit {
