--- a/src/css/uidevtest.css
+++ b/src/css/uidevtest.css
@@ -189,7 +189,11 @@ p.story-timestamp {
 	bottom: 2px;
 	right: 2px;
 
-	background-color: rgba(255,255,255, .6);
+	background: rgb(255, 255, 255) transparent;
+	background: rgba(255, 255, 255, .6);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#99FFFFFF, endColorstr=#99FFFFFF);
+	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99FFFFFF, endColorstr=#99FFFFFF)";
+
 	color: #000;
 	font-size: 14px;
 	line-height: 20px;
